# cv-starter

./: .gitignore  README.md  main.py  pyproject.toml  roadmap.md
kb/: edge-deployment.md  inference-explained.md  performance-tuning.md  resource-metrics.md  signals-and-inputs.md  why-filters-matter.md  yolo-coco-classes.md  yolo-oiv7-classes.md  zerobus-pipeline.md
src/: analyze_session.py  check_setup.py  filter_explorer.py  motion_detector.py
